--- a/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/WalletRow.scss
+++ b/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/WalletRow.scss
@@ -1,15 +1,17 @@
 .component {
-    display: grid;
-    grid-template-columns: 5fr 5fr 2fr; 
-    grid-gap: 5px;
-    margin-bottom: 10px;
-    align-items: center;
-    padding: 12px;
+    padding: 15px 12px 20px 12px;
     border: 1px solid #ffff;
     border-radius: 8px;
 
     &:hover {
         border: 1px solid #EAEDF2;
+    }
+
+    .rowWrapper {
+        display: grid;
+        grid-template-columns: 5fr 5fr 2fr; 
+        grid-gap: 5px;
+        align-items: center;
     }
 
     .name {
@@ -31,7 +33,6 @@
         line-height: 22px;
         & .avatar {
             margin-right: 12px;
-            background-color: greenyellow;
             overflow: hidden;
             width: 32px;
             height: 32px;
@@ -82,9 +83,13 @@
 
         .websiteIcon {
             margin-right: 10px;
+            border-radius: 50%;
+            overflow: hidden;
+            width: 32px;
+            height: 32px;
+            border: 1px solid #EAEDF2 ;
            img {
-                width: 32px;
-                height: 32px;
+                object-fit: cover;
            }
         }
     }
