--- a/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/ConnectedWebsitesPage.scss
+++ b/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/ConnectedWebsitesPage.scss
@@ -36,10 +36,8 @@
         padding-bottom: 16px;
       }
     }
-    
     .chain {
-      padding: 24px;
-
+      padding: 0px 24px;
       & > h1 {
         margin-top: 8px;
         margin-bottom: 8px;
@@ -50,6 +48,22 @@
         letter-spacing: 0;
         line-height: 22px;
       }
+
+      .line {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & > div {
+          width: 100%;
+          height: 1px;
+          background-color: #DCE0E9;
+          margin: 30px 0px;
+          margin-left: 14px;
+        }
+      }
+    }
+    .chain:first-child {
+      padding-top: 20px;
     }
 }
 
