--- a/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/WalletRow.scss
+++ b/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/WalletRow.scss
@@ -2,6 +2,7 @@
     padding: 15px 12px 20px 12px;
     border: 1px solid #ffff;
     border-radius: 8px;
+    margin-bottom: 15px;
 
     &:hover {
         border: 1px solid #EAEDF2;
@@ -52,6 +53,7 @@
         align-items: center;
         justify-content: flex-end;
         padding-right: 25px;
+        margin-top: -10px;
     }
 
     .dapp {
