Add custom amount field

--- a/packages/yoroi-extension/app/components/wallet/send/SendFormHeader.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/SendFormHeader.scss
@@ -10,6 +10,7 @@
             letter-spacing: 0;
             line-height: 24px;
             text-align: center;
+            cursor: pointer;
         }
 
         & .tabActive {
