--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFormRevamp.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFormRevamp.scss
@@ -73,6 +73,10 @@
             }
         }
 
+        .amountStep {
+            padding-top: 30px;
+        }
+
         .amountInput {
             position: relative;
             border: 1px solid #A7AFC0;
