Fix receiver address display

--- a/packages/yoroi-extension/app/ergo-connector/components/signin/UtxoDetails.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/signin/UtxoDetails.scss
@@ -2,7 +2,8 @@
   padding-right: 32px;
   padding-left: 32px;
   padding-top: 30px;
-  overflow-wrap: break-word;
+  padding-bottom: 30px;
+  overflow-y: scroll;
 }
 
 .rowData {
