--- a/packages/yoroi-extension/app/ergo-connector/components/signin/SignTxPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/signin/SignTxPage.scss
@@ -2,7 +2,6 @@
   padding-right: 15px;
   padding-left: 15px;
   padding-top: 30px;
-  overflow-wrap: break-word;
 
   .title {
     font-size: 24px;
@@ -39,6 +38,11 @@
       color: #6B7384;
       font-size: 14px;
       line-height: 22px;
+      .address {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     }
     .utxo {
       display: flex;
