Make utxo details page scrollable

--- a/packages/yoroi-extension/app/ergo-connector/components/signin/UtxoDetails.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/signin/UtxoDetails.scss
@@ -4,6 +4,9 @@
   padding-top: 30px;
   padding-bottom: 30px;
   overflow-y: scroll;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 100px;
 }
 
 .rowData {
