--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFromSteps/WalletSendPreviewStep.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFromSteps/WalletSendPreviewStep.scss
@@ -1,6 +1,9 @@
 .component {
     width: 65%;
     padding-top: 15px;
+    overflow-y: scroll;
+    height: 100%;
+
     .addressToLabel {
         font-size: 16px;
         letter-spacing: 0;
@@ -35,6 +38,7 @@
         font-size: 16px;
         letter-spacing: 0;
         line-height: 24px;
+        margin-bottom: 12px;
 
         .feesLabel {
             color: #6B7384;
@@ -45,4 +49,26 @@
         }
     }
     
+    .totalAmountWrapper {
+        margin-top: 17px;
+        margin-bottom: 40px;
+        border-radius: 8px;
+        background-color: #3154CB;
+        padding: 29px 24px;
+        display: flex;
+        justify-content: space-between;
+        color: #ffffff;
+
+        .assetsCount {
+            text-align: right;
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 28px;
+        }
+
+        .totalAmountValue {
+            text-align: right;
+            margin-top: 4px;
+        }
+    }
 }
