Update Minimum required Ada error message

--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFormRevamp.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFormRevamp.scss
@@ -118,7 +118,7 @@
 
             }
 
-            .ada {
+            .defaultCoin {
                 color: #6B7384;
                 font-family: Rubik;
                 font-size: 14px;
