--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFormRevamp.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFormRevamp.scss
@@ -165,10 +165,16 @@
             letter-spacing: 0.4px;
             line-height: 16px;
             margin-left: 16px;
-            margin-top: 2px;
+            margin-top: 4px;
         }
 
-        // Preview Step Styles 
+        .emptyError {
+            margin-top: 4px;
+            width: 100%;
+            height: 16px;
+        }
+
+        // Preview Step styles 
         .receiver {
             padding-top: 10px;
             font-family: Rubik;
