--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFormRevamp.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFormRevamp.scss
@@ -177,7 +177,7 @@
 
         .buttonsWrappers {
             margin-top: 20px;
-            margin-bottom: 60px;
+            margin-bottom: 30px;
             display: flex;
             align-items: center;
             justify-content: flex-start;
@@ -203,6 +203,14 @@
                     margin-left: 8px;
                 }
             }
+        }
+
+
+        .next {
+           button {
+                padding: 0px;
+                margin: 30px 0px 0px 0px;
+           }
         }
     }
 }
