--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFormRevamp.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFormRevamp.scss
@@ -207,10 +207,12 @@
 
 
         .next {
-           button {
-                padding: 0px;
-                margin: 30px 0px 0px 0px;
-           }
+            display: inline-block;
+            margin-top: 30px;
+            button {
+                    padding: 0px;
+                    margin: 0px;
+            }
         }
     }
 }
