fix width sidebar revamp

--- a/packages/yoroi-extension/app/components/topbar/SidebarRevamp.scss
+++ b/packages/yoroi-extension/app/components/topbar/SidebarRevamp.scss
@@ -1,6 +1,7 @@
 .wrapper {
   min-height: 100%;
   display: flex;
+  max-width: 88px;
   flex-direction: column;
   align-items: center;
   background: linear-gradient(30.09deg, #244abf 0%, #4760ff 100%);
