--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFromSteps/AddTokenDialog.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFromSteps/AddTokenDialog.scss
@@ -2,6 +2,36 @@
     min-height: 400px;
     width: 100%;
     height: 100%;
+
+    .search {
+        border-radius: 8px;
+        background-color: #F0F3F5;
+        display: flex;
+        align-items: center;
+        padding: 0px 20px;
+
+        .searchInput {
+            width: 100%;
+            background-color: inherit;
+            border: none;
+            padding: 12px 0px;
+            margin-left: 12px;
+        }
+
+        .searchInput:focus {
+            outline: none;
+        }
+
+        .searchInput::placeholder {
+            color: #A7AFC0;
+            font-family: Rubik;
+            font-size: 14px;
+            letter-spacing: 0;
+            line-height: 22px;
+        }
+
+    }
+
     .tokensList {
         .tokenRow {
             display: grid;
