--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFromSteps/AddTokenDialog.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFromSteps/AddTokenDialog.scss
@@ -32,6 +32,17 @@
 
     }
 
+    .minAda {
+        color: #242838;
+        font-family: Rubik;
+        font-size: 16px;
+        letter-spacing: 0;
+        line-height: 24px;
+        text-align: center;
+        text-transform: uppercase;
+        margin: 20px 0px;
+    }
+
     .tokensList {
         .tokenRow {
             display: grid;
