Add fingerprint column

--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFromSteps/AddTokenDialog.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFromSteps/AddTokenDialog.scss
@@ -76,6 +76,10 @@
             display: flex;
             align-items: center;
             justify-content: center;
+
+            .headerText {
+                margin-right: 4px;
+            }
         }
         
         .quantity {
