Display add button on the dialog

--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFromSteps/AddTokenDialog.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFromSteps/AddTokenDialog.scss
@@ -2,6 +2,8 @@
     min-height: 400px;
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 
     .search {
         border-radius: 8px;
@@ -98,9 +100,31 @@
             }
         }
     }
+
+    .add {
+        border-top: 2px solid#DCE0E9;
+        cursor: pointer;
+        text-transform: uppercase;
+        width: 670px;
+        text-align: center;
+        color: #17D1AA;
+        font-family: Rubik;
+        font-size: 16px;
+        font-weight: 500;
+        letter-spacing: 0.5px;
+        line-height: 22px;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: -40px;
+        margin-top: auto;
+
+    }
 }
 
 .dialog {
     min-width: 670px !important;
+    padding-bottom: 0px !important;
 }
   
