--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/SingleTokenRow.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/SingleTokenRow.scss
@@ -1,11 +1,11 @@
 .component {
-    margin-bottom: 32px;
+    margin-bottom: 16px;
     .token {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         align-items: center;
         padding: 4px 0px;
-
+        margin-bottom: 23px;
         .name {
             display: flex;
             align-items: center;
@@ -42,9 +42,48 @@
         border: 1px solid #A7AFC0;
         border-radius: 8px;
         padding: 12px 16px;
+        position: relative;
 
-        input {
-            text-align: right; 
+        .amountTokenName {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+
+            .logo {
+                margin-right: 16px;
+            }
+
+            .label {
+                color: #242838;
+            }
+        }
+
+        .amountInput {
+            width: 50%;
+            margin-right: 8px;
+            input {
+                text-align: right; 
+                font-size: 16px;
+                line-height: 24px;
+            }
+
+            .amount::placeholder {
+                font-size: 16px;
+                line-height: 24px;
+            }
+        }
+
+        .close {
+            position: absolute;
+            height: 32px;
+            width: 32px;
+            background-color: #F0F3F5;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            top: -10px;
+            right: -10px;
         }
     }
 }
