Display amount placholder

--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/SingleTokenRow.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/SingleTokenRow.scss
@@ -67,7 +67,7 @@
                 line-height: 24px;
             }
 
-            .amount::placeholder {
+            input::placeholder {
                 font-size: 16px;
                 line-height: 24px;
             }
