Display Not Found Image

--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/AddTokenDialog.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/AddTokenDialog.scss
@@ -1,5 +1,5 @@
 .component {
-    min-height: 400px;
+    min-height: 500px;
     width: 100%;
     height: 100%;
     display: flex;
@@ -99,6 +99,33 @@
                 }
             }
         }
+    }
+
+    .noAssetFound {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-top: 30px;
+        padding-bottom: 30px;
+
+        img {
+            display: inline-block;
+            width: 130px;
+            height: 100px;
+            margin-bottom: 24px;
+        }
+
+        .text {
+            color: #242838;
+            font-family: Rubik;
+            font-size: 18px;
+            font-weight: 500;
+            letter-spacing: 0;
+            line-height: 26px;
+            text-align: center;
+        }
+
     }
 
     .add {
