--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/AddNFTDialog.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/AddNFTDialog.scss
@@ -45,58 +45,38 @@
         margin: 20px 0px;
     }
 
-    .headerText {
-        color: #A7AFC0;
-        font-family: Rubik;
-        font-size: 14px;
-        letter-spacing: 0;
-        line-height: 22px;
-    }
 
-    .columns {
+    .nftsGrid {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        margin: 16px 0px 32px 0px;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 25px;
+        margin-bottom: 20px;
 
-        .name {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-
-            button {
-                display: flex;
-                align-items: center;
-                justify-content: flex-end;
-
-                p {
-                    margin-right: 4px;
-                }
+        .nftCard {
+            padding: 10.5px;
+            width: 180px;
+            height: 270px;
+            overflow: hidden;
+            border: 1px solid #EAEDF2;
+            border-radius: 8px;
+            background-color: #FFFFFF;
+            img {
+                display: inline-block;
+                width: 100%;
+                height: 200px;
+                border-radius: 8px;
             }
-        }
 
-        .identifier {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            .headerText {
-                margin-right: 4px;
-            }
-        }
-        
-        .quantity {
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-
-            button {
-                display: flex;
-                align-items: center;
-                justify-content: flex-end;
-
-                p {
-                    margin-right: 4px;
-                }
+            .nftName {
+                margin-top: 12px;
+                color: #242838;
+                font-family: Rubik;
+                font-size: 16px;
+                letter-spacing: 0;
+                line-height: 24px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
         }
     }
