--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/AddNFTDialog.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/AddNFTDialog.scss
@@ -1,7 +1,6 @@
 .component {
-    min-height: 400px;
-    width: 100%;
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
 
@@ -51,8 +50,11 @@
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 25px;
         margin-bottom: 20px;
+        height: 360px;
+        overflow-y: scroll;
 
         .nftCard {
+            cursor: pointer;
             padding: 10.5px;
             width: 180px;
             height: 270px;
@@ -85,7 +87,7 @@
         border-top: 2px solid#DCE0E9;
         cursor: pointer;
         text-transform: uppercase;
-        width: 670px;
+        width: 690px;
         text-align: center;
         color: #17D1AA;
         font-family: Rubik;
@@ -104,7 +106,10 @@
 }
 
 .dialog {
-    min-width: 670px !important;
+    min-width: 690px !important;
     padding-bottom: 0px !important;
+
+    h1 {
+        padding: 0px;
+    }
 }
-  
