Update add tokens dialog layout

--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/SingleTokenRow.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/SingleTokenRow.scss
@@ -1,5 +1,6 @@
 .component {
     margin-bottom: 16px;
+    margin-right: 10px;
     .token {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
