--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/AddTokenDialog.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/AddTokenDialog.scss
@@ -34,6 +34,12 @@
 
     }
 
+    .columnsContainer {
+        height: 360px;
+        overflow-y: scroll;
+        margin-right: -30px;
+    }
+
     .minAda {
         color: #242838;
         font-family: Rubik;
@@ -54,6 +60,7 @@
     }
 
     .columns {
+        width: 100%;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         margin: 16px 0px 32px 0px;
@@ -88,6 +95,7 @@
             display: flex;
             align-items: center;
             justify-content: flex-end;
+            margin-right: 10px;
 
             button {
                 display: flex;
