--- a/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/TokensAmountPreview.scss
+++ b/packages/yoroi-extension/app/components/wallet/send/WalletSendFormSteps/TokensAmountPreview.scss
@@ -2,4 +2,13 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
+
+    .tokens {
+
+    }
+
+    .nfts {
+        width: 50%;
+        background-color: green;
+    }
 }
