--- a/packages/yoroi-extension/app/components/dapp-connector/Layout/DappConnectorNavbar.scss
+++ b/packages/yoroi-extension/app/components/dapp-connector/Layout/DappConnectorNavbar.scss
@@ -1,6 +1,10 @@
 .component {
     background-color: #FFFFFF;
     box-shadow: 0 2px 5px 3px rgba(0, 0, 0, 0.06);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 32px 40px;
 
     .header {
         color: #38393D;
@@ -9,6 +13,5 @@
         font-weight: 500;
         letter-spacing: 0;
         line-height: 28px;
-        padding: 32px 40px;
     }
 }
