--- a/packages/yoroi-extension/app/components/dapp-connector/Layout/DappConnectorNavbar.scss
+++ b/packages/yoroi-extension/app/components/dapp-connector/Layout/DappConnectorNavbar.scss
@@ -14,4 +14,58 @@
         letter-spacing: 0;
         line-height: 28px;
     }
+
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+
+        input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            -webkit-transition: .4s;
+            transition: .4s;
+            border-radius: 34px;
+
+            &:before {
+                position: absolute;
+                content: "";
+                height: 26px;
+                width: 26px;
+                left: 4px;
+                bottom: 4px;
+                background-color: white;
+                -webkit-transition: .4s;
+                transition: .4s;
+                border-radius: 50%;
+            }
+        }
+
+        .sliderFocus {
+            box-shadow: 0 0 1px #2196F3;
+        }
+
+        .sliderChecked {
+            background-color:#2196F3;
+            
+            &:before {
+                -webkit-transform: translateX(26px);
+                -ms-transform: translateX(26px);
+                transform: translateX(26px);
+            }
+        }
+    }
+      
 }
