--- a/packages/yoroi-extension/app/ergo-connector/components/signin/CardanoSignTxPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/signin/CardanoSignTxPage.scss
@@ -8,13 +8,13 @@
     font-size: 24px;
     line-height: 32px;
     margin-bottom: 20px;
-    padding: 0px 20px;
+    padding: 0 20px;
   }
 
   .transactionWrapper {
     margin-top: 20px;
     margin-bottom: 30px;
-    padding: 0px 20px;
+    padding: 0 20px;
 
     .transactionId {
       font-size: 16px;
@@ -51,7 +51,7 @@
       width: 100%;
       color: var(--yoroi-palette-gray-800);
 
-    }    
+    }
   }
 
   .info {
