redesign cardano dapp signTX page

--- a/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
@@ -2,6 +2,7 @@
   height: calc(100vh - 92px);
   display: flex;
   flex-direction: column;
+  overflow: overlay;
   &.isNightly {
     height: calc(100vh - 138px);
   }
