Fix fees columns alignment

--- a/packages/yoroi-extension/app/components/wallet/summary/WalletSummary.scss
+++ b/packages/yoroi-extension/app/components/wallet/summary/WalletSummary.scss
@@ -139,6 +139,7 @@ $rightBlockWidth: $leftBlockWidth;
 .fee {
   min-width: $min-fee-width;
   text-align: $fee-align;
+  // background-color: green;
 }
 .amount {
   min-width: $min-amount-width;
