--- a/packages/yoroi-extension/app/components/experimental/YoroiPalette/YoroiPalette.scss
+++ b/packages/yoroi-extension/app/components/experimental/YoroiPalette/YoroiPalette.scss
@@ -1,6 +1,25 @@
 .component {
     padding: 20px 40px;
 
+    .themes {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        width: 400px;
+        gap: 10px;
+        margin-bottom: 20px;
+        button {
+            font-size: 16px;
+            font-weight: 400;
+            color: #333438;
+            padding: 10px 16px;
+            border-radius: 10px;
+            background-color: #F0F3F5;
+        }
+        .active {
+            background-color: #59B1F4;
+        }
+    }
+
     .row {
         max-width: 1000px;
         display: grid;
