--- a/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/Permissions.scss
+++ b/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/Permissions.scss
@@ -1,3 +1,38 @@
 .component {
+    background-color: #F0F3F5;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
     
+    .centered {
+        width: 650px;
+        margin-top: 40px;
+
+        .mainHeader {
+            color: #242838;
+            font-family: Rubik;
+            font-size: 24px;
+            letter-spacing: 0;
+            line-height: 32px;
+            margin-top: 20px;
+            margin-bottom: 30px;
+            text-align: center;
+        }
+
+        .block {
+            display: grid;
+            grid-template-columns: 1fr 11fr;
+            gap: 24px;
+            margin-bottom: 40px;
+
+            .icon {
+                width: 80px;
+                height: 80px;
+                opacity: 0.08;
+                border-radius: 8px;
+                background-color: #3154CB;
+            }
+        }
+    }
 }
