--- a/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/Permissions.scss
+++ b/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/Permissions.scss
@@ -26,8 +26,22 @@
             gap: 24px;
             margin-bottom: 40px;
 
-            .icon {
-                
+            .blockContent {
+                color: #242838;
+                font-family: Rubik;
+                .blockHeader {
+                    font-size: 18px;
+                    font-weight: 500;
+                    letter-spacing: 0;
+                    line-height: 26px;
+                    margin-bottom: 8px;
+                }
+
+                .blockText {
+                    font-size: 16px;
+                    letter-spacing: 0;
+                    line-height: 24px;
+                }
             }
         }
     }
