Display enable button

--- a/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/Permissions.scss
+++ b/packages/yoroi-extension/app/components/dapp-connector/ConnectedWebsites/Permissions.scss
@@ -41,7 +41,40 @@
                     font-size: 16px;
                     letter-spacing: 0;
                     line-height: 24px;
+
+                    a {
+                        color:  #3154CB;
+                        margin: 0px 3px;
+                        display: inline-block;
+                        text-decoration: none;
+                        font-size: 16px;
+                        letter-spacing: 0;
+                        line-height: 24px;
+                    }
                 }
+            }
+        }
+
+
+        .enable {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .enableBtn {
+                height: 52px;
+                width: 284px;
+                border-radius: 8px;
+                background-color: #17D1AA;
+                color: #FFFFFF;
+                font-family: Rubik;
+                font-size: 16px;
+                font-weight: 500;
+                letter-spacing: 0.5px;
+                line-height: 22px;
+                text-align: center;
+                text-transform: uppercase;
+                margin-top: 20px;
             }
         }
     }
