--- a/packages/yoroi-extension/app/components/wallet/summary/DAppConnectorPermissionDialog.scss
+++ b/packages/yoroi-extension/app/components/wallet/summary/DAppConnectorPermissionDialog.scss
@@ -1,7 +1,45 @@
 .component {
+    display: flex;
+    background-color: yellow;
+    width: 100%;
+    height: 100%;
+    .centered {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+        // background-color: green;
+
+
+        .icon {
+            height: 100px;
+            width: 100px;
+            background-color: var(--yoroi-palette-gray-100);
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            svg > g > path:last-child {
+                fill: #3154CB;
+                opacity: 1;
+            }
+        }
+
+        .content {
+            width: 600px;
+        }
+    }
 }
 .DAppConnectorPermissionDialog {
     min-width: 100vw !important;
     width: 100% !important;
     height: 180px;
+    padding: 0px !important;
+
+    display: flex;
+    justify-content: center;
+    & > div {
+        padding: 0px !important;
+    }
 }
