--- a/packages/yoroi-extension/app/components/wallet/summary/DAppConnectorPermissionDialog.scss
+++ b/packages/yoroi-extension/app/components/wallet/summary/DAppConnectorPermissionDialog.scss
@@ -1,14 +1,14 @@
 .component {
     display: flex;
-    background-color: yellow;
     width: 100%;
     height: 100%;
     .centered {
         display: flex;
         flex-direction: row;
+        padding: 0px 40px;
+        align-content: center;
         justify-content: center;
         width: 100%;
-        // background-color: green;
 
 
         .icon {
@@ -19,6 +19,12 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            margin-right: 12px;
+
+            svg {
+                width: 32px;
+                height: 32px;
+            }
 
             svg > g > path:last-child {
                 fill: #3154CB;
@@ -28,6 +34,35 @@
 
         .content {
             width: 600px;
+            margin-left: 12px;
+            margin-right: 35px;
+
+            color: #242838;
+            font-family: Rubik;
+            .header {
+                font-size: 20px;
+                font-weight: 500;
+                letter-spacing: 0;
+                line-height: 28px;
+                margin-bottom: 12px;
+            }
+
+            .text {
+                font-size: 16px;
+                letter-spacing: 0;
+                line-height: 19px;
+            }
+        }
+
+        .actions {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+
+            button:first-child {
+                margin-right: 24px;
+            }
         }
     }
 }
