--- a/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
@@ -65,6 +65,10 @@
     font-size: 16px;
     line-height: 24px;
     cursor: pointer;
+
+    &::first-letter {
+      text-transform: uppercase;
+    }
   }
 }
 
