--- a/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
@@ -1,5 +1,7 @@
 .component {
   height: calc(100vh - 92px);
+  overflow: scroll;
+  padding-bottom: 70px;
   display: flex;
   flex-direction: column;
   &.isNightly {
