Remove window height from cardano sing tx page

--- a/packages/yoroi-extension/app/ergo-connector/components/signin/SignTxPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/signin/SignTxPage.scss
@@ -1,8 +1,11 @@
 .component {
   height: calc(100vh - 92px);
-  padding: 30px 15px ;
   overflow: scroll;
   width: 100%;
+  
+  .signTx {
+    padding: 30px 15px ;
+  }
 
   .title {
     font-size: 24px;
