--- a/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
@@ -107,3 +107,16 @@
     overflow-wrap: break-word;
   }
 }
+
+
+@media (min-width: 678px) {
+  .component {
+    max-width: 600px;
+    margin: auto;
+    padding-top: 40px;
+
+    .pageTitle {
+      text-align: center;
+    }
+  }
+}
