Update overflow to be auto

--- a/packages/yoroi-extension/app/ergo-connector/components/signin/SignTxPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/signin/SignTxPage.scss
@@ -1,6 +1,6 @@
 .component {
   height: calc(100vh - 92px);
-  overflow: scroll;
+  overflow: auto;
   width: 100%;
   .signTx {
     padding: 30px 15px 20px 15px ;
