--- a/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
+++ b/packages/yoroi-extension/app/ergo-connector/components/connect/ConnectPage.scss
@@ -1,6 +1,6 @@
 .component {
   height: calc(100vh - 92px);
-  overflow: scroll;
+  overflow: auto;
   &.isNightly {
     height: calc(100vh - 138px);
   }
